backend: refactoring