@@ -4,42 +4,37 @@ import jakarta.annotation.PostConstruct;
 import lombok.RequiredArgsConstructor;
 import org.jsoup.Connection;
 import org.jsoup.Jsoup;
-import org.jsoup.nodes.Document;
-import org.jsoup.nodes.Element;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Service;
-import org.springframework.util.ResourceUtils;
 import ru.aikr.inet.parser.domain.WebImage;
+import ru.aikr.inet.parser.service.HtmlParserService;
+import ru.aikr.inet.parser.service.ImageDownloaderService;
+import ru.aikr.inet.parser.service.UserAgentService;
 import ru.aikr.inet.parser.service.WebImageParserService;
 import ru.aikr.inet.parser.util.AnsiColors;
 
 import javax.net.ssl.SSLContext;
-import javax.net.ssl.TrustManager;
-import javax.net.ssl.X509TrustManager;
 import java.io.File;
 import java.io.IOException;
-import java.io.InputStream;
-import java.net.URI;
-import java.net.URISyntaxException;
-import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.security.KeyManagementException;
 import java.security.NoSuchAlgorithmException;
-import java.security.SecureRandom;
-import java.security.cert.X509Certificate;
 import java.util.*;
 import java.util.logging.Logger;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
 public class FishkiWebImageParserService implements WebImageParserService {
 
     private static final Logger log = Logger.getLogger("FishkiParserService");
-
-    private static String[] USER_AGENTS = {};
+    private final ImageDownloaderService imageDownloader;
+    private final UserAgentService userAgentService;
+    private final HtmlParserService htmlParser;
+    private final SecurityConfigService securityConfig;
+    private final DelayService delayService;
 
     @Value("${sites.fishki-url}")
     private String fishkiUrl;
@@ -56,57 +51,16 @@ public class FishkiWebImageParserService implements WebImageParserService {
     @Value("${env.parser.proxy.proxy-port}")
     private String proxyPort;
 
-    @Value("${env.parser.user-agents-file}")
-    private String userAgentsFile;
-
-    @Value("${env.parser.max-retries}")
-    private int maxRetries;
-
-    @Value("${env.parser.min-parse-delay-ms}")
-    private int minDelayMs;
-
-    @Value("${env.parser.max-parse-delay-ms}")
-    private int maxDelayMs;
-
-    private final Random random = new Random();
-
 
     // Инициализация
     @PostConstruct
     public void init() {
-        loadUserAgents();
         log.info(AnsiColors.CYAN + "=".repeat(50) + AnsiColors.RESET);
         log.info(AnsiColors.CYAN + "Fishki Parser initialized" + AnsiColors.RESET);
         log.info(AnsiColors.CYAN + String.format(
                 "Config: URL=%s | Selector=%s", fishkiUrl, divContainerWithImage
         ) + AnsiColors.RESET);
         log.info(AnsiColors.CYAN + "=".repeat(50) + AnsiColors.RESET);
-    }
-
-    private void loadUserAgents() {
-        try {
-            File file = ResourceUtils.getFile(userAgentsFile);
-            List<String> agents = Files.readAllLines(file.toPath());
-            USER_AGENTS = agents.toArray(new String[0]);
-            log.info(AnsiColors.CYAN + String.format(
-                    "Loaded %d User-Agents from %s", USER_AGENTS.length, userAgentsFile
-            ) + AnsiColors.RESET);
-        } catch (IOException e) {
-            log.severe(AnsiColors.RED + "User-Agent load error: " + e.getMessage() + AnsiColors.RESET);
-        }
-    }
-
-
-    private SSLContext getUnsafeSSLContext() throws NoSuchAlgorithmException, KeyManagementException {
-        SSLContext sslContext = SSLContext.getInstance("TLS");
-        sslContext.init(null, new TrustManager[]{
-                new X509TrustManager() {
-                    public void checkClientTrusted(X509Certificate[] chain, String authType) {}
-                    public void checkServerTrusted(X509Certificate[] chain, String authType) {}
-                    public X509Certificate[] getAcceptedIssuers() { return new X509Certificate[0]; }
-                }
-        }, new SecureRandom());
-        return sslContext;
     }
 
 
@@ -118,7 +72,7 @@ public class FishkiWebImageParserService implements WebImageParserService {
         for (int i = pageBegin; i <= pageEnd; i++) {
             log.info(AnsiColors.CYAN + "-".repeat(40) + AnsiColors.RESET);
             parsePage(i, resultList);
-            humanDelay();
+            delayService.humanDelay();
         }
         return resultList;
     }
@@ -126,17 +80,15 @@ public class FishkiWebImageParserService implements WebImageParserService {
 
     private void parsePage(int pageNumber, List<WebImage> resultList) {
         String url = fishkiUrl + pageNumber;
-        String ua = getRandomUserAgent();
+        String ua = userAgentService.getRandomUserAgent();
 
         log.info(AnsiColors.CYAN + String.format(
-                "Parsing page %d\nURL: %s\nUser-Agent: %s",
+                "Parsing page %d | URL: %s | User-Agent: %s",
                 pageNumber, url, ua.substring(0, Math.min(40, ua.length())) + "..." + AnsiColors.RESET
         ));
 
         try {
-            SSLContext sslContext = SSLContext.getInstance("TLSv1.2");
-            sslContext.init(null, getTrustAllCerts(), new SecureRandom());
-
+            SSLContext sslContext = securityConfig.getUnsafeSSLContext();
             Connection.Response response = Jsoup.connect(url)
                     .userAgent(ua)
                     .sslSocketFactory(sslContext.getSocketFactory())
@@ -162,8 +114,7 @@ public class FishkiWebImageParserService implements WebImageParserService {
             }
 
             // Парсинг контента
-            Document doc = response.parse();
-            processElements(doc.select(divContainerWithImage), resultList);
+            resultList.addAll(htmlParser.parsePage(url, divContainerWithImage));
 
             if (resultList.isEmpty()) {
                 log.warning(AnsiColors.YELLOW + String.format(
@@ -190,7 +141,6 @@ public class FishkiWebImageParserService implements WebImageParserService {
     }
 
 
-
     // Извлечение номера страницы из URL
     private int extractPageNumber(String url) {
         try {
@@ -199,18 +149,6 @@ public class FishkiWebImageParserService implements WebImageParserService {
         } catch (NumberFormatException e) {
             return 1;
         }
-    }
-
-
-    // Доверяем всем сертификатам
-    private TrustManager[] getTrustAllCerts() {
-        return new TrustManager[]{
-                new X509TrustManager() {
-                    public void checkClientTrusted(X509Certificate[] chain, String authType) {}
-                    public void checkServerTrusted(X509Certificate[] chain, String authType) {}
-                    public X509Certificate[] getAcceptedIssuers() { return new X509Certificate[0]; }
-                }
-        };
     }
 
     // Повтор через прокси
@@ -229,83 +167,15 @@ public class FishkiWebImageParserService implements WebImageParserService {
     }
 
 
-    private void processElements(List<Element> elements, List<WebImage> result) {
-        for (Element element : elements) {
-            String link = element.children().attr("abs:href");
-            if (isValidUrl(link)) {
-                result.add(new WebImage(link));
-            }
-        }
-    }
-
     // Загрузка изображений с повторами
     @Override
     public List<File> downloadImagesFromWebImageLinks(List<WebImage> webImageList) {
-        List<File> files = new ArrayList<>();
-        log.info(AnsiColors.CYAN + "\n=== DOWNLOADING %d IMAGES ===".formatted(webImageList.size()) + AnsiColors.RESET);
-
-        try {
-            Path dir = Files.createDirectories(Paths.get(downloadFolder));
-            for (int i = 0; i < webImageList.size(); i++) {
-                WebImage image = webImageList.get(i);
-                log.info(AnsiColors.CYAN + String.format(
-                        "%d/%d: %s",
-                        i + 1, webImageList.size(), image.getDirectLink()
-                ) + AnsiColors.RESET);
-                processImage(image, dir, files);
-            }
-        } catch (IOException e) {
-            log.severe(AnsiColors.RED + "Download error: " + e.getMessage() + AnsiColors.RESET);
-        }
-        return files;
+        return imageDownloader.downloadImages(webImageList, Path.of(downloadFolder))
+                .stream()
+                .map(Path::toFile)
+                .collect(Collectors.toList());
     }
 
-
-
-    private void processImage(WebImage image, Path dir, List<File> files) {
-        for (int attempt = 1; attempt <= maxRetries; attempt++) {
-            try {
-                URI uri = new URI(image.getDirectLink());
-                Path outputPath = dir.resolve(sanitizeFileName(uri.getPath()));
-
-                if (Files.notExists(outputPath)) {
-                    downloadFile(uri, outputPath);
-                    log.info(AnsiColors.GREEN + String.format(
-                            "Downloaded: %s (Attempt %d)",
-                            outputPath.getFileName(), attempt
-                    ) + AnsiColors.RESET);
-                }
-                files.add(outputPath.toFile());
-                break;
-            } catch (URISyntaxException | IOException e) {
-                handleDownloadError(image, attempt, e);
-            }
-        }
-    }
-
-    private void downloadFile(URI uri, Path outputPath) throws IOException {
-
-        String ua = getRandomUserAgent();
-        log.info("Current UserAgent value: " + ua);
-
-        try (InputStream is = Jsoup.connect(uri.toString())
-                .userAgent(ua)
-                .sslSocketFactory(getUnsafeSSLContext().getSocketFactory()) // Добавлено
-                .ignoreContentType(true)
-                .execute()
-                .bodyStream()) {
-
-            Files.copy(is, outputPath);
-        } catch (NoSuchAlgorithmException | KeyManagementException e) {
-            throw new IOException("SSL error: " + e.getMessage());
-        }
-    }
-
-
-    // Вспомогательные методы
-    private String getRandomUserAgent() {
-        return USER_AGENTS[random.nextInt(USER_AGENTS.length)];
-    }
 
     private Map<String, String> getBrowserHeaders() {
         return Map.of(
@@ -315,32 +185,6 @@ public class FishkiWebImageParserService implements WebImageParserService {
         );
     }
 
-    private void humanDelay() {
-        try {
-            Thread.sleep(minDelayMs + random.nextInt(maxDelayMs - minDelayMs));
-        } catch (InterruptedException e) {
-            Thread.currentThread().interrupt();
-        }
-    }
 
-    private String sanitizeFileName(String input) {
-        return input.replaceAll("[^a-zA-Z0-9.-]", "_");
-    }
 
-    private boolean isValidUrl(String url) {
-        return url != null && url.startsWith("http");
-    }
-
-    private void handleDownloadError(WebImage image, int attempt, Exception e) {
-        String message = String.format(
-                "Attempt %d/%d failed: %s | URL: %s",
-                attempt, maxRetries, e.getMessage(), image.getDirectLink()
-        );
-
-        if (attempt == maxRetries) {
-            log.severe(AnsiColors.RED + message + AnsiColors.RESET);
-        } else {
-            log.warning(AnsiColors.YELLOW + message + AnsiColors.RESET);
-        }
-    }
 }
